--- a/HouseRenting/HouseRenting.Web/Views/House/Add.cshtml
+++ b/HouseRenting/HouseRenting.Web/Views/House/Add.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model HouseFormModel
 @{
+    ViewData["Title"] = "Add House";
+}
+
+<h2 class="text-center">@ViewData["Title"]</h2>
+<hr/>
+<partial name="_HouseFormPartial" model="@Model"/>
+@section Scripts
+{
+    <partial name="_ValidationScriptsPartial"/>
 }
