--- a/HouseRenting/HouseRenting.Web/Views/Shared/_HousePartial.cshtml
+++ b/HouseRenting/HouseRenting.Web/Views/Shared/_HousePartial.cshtml
@@ -1,44 +1,53 @@
-﻿@model HouseAllViewModel
+﻿@using HouseRentingSystem.Services.Interfaces
+@using HouseRentingSystem.Web.Infrastructure.Extensions
+@model HouseAllViewModel
+@inject IAgentService AgentService
+@{
+    bool isUserAgent = await AgentService.AgentExistsByUserIdAsync(this.User.GetId());
+    bool isAgentOwnerOfTheHouse = await AgentService.HasHouseWithIdAsync(this.User.GetId()!, Model.Id);
+}
 
 <div class="col-md-4">
-<div class="card mb-3">
-<img class="card-img-top" src="@Model.ImageUrl" alt="House Image">
-<div class="card-body text-center">
-<h4>@Model.Title</h4>
-    <h6>Address: <b>@Model.Address</b></h6>
-    <h6>
-        Price Per Month:
-        <b>@($"{Model.PricePerMonth:f2}") BGN</b>
-    </h6>
-    <h6>(@(Model.IsRented ? "Rented" : "Not Rented"))</h6>
-    <br />
-    <a asp-controller="House" asp-action="Details" asp-route-id="@Model.Id"
-       class="btn btn-success">Details</a>
+    <div class="card mb-3">
+        <img class="card-img-top" src="@Model.ImageUrl" alt="House Image">
+        <div class="card-body text-center">
+            <h4>@Model.Title</h4>
+            <h6>Address: <b>@Model.Address</b></h6>
+            <h6>
+                Price Per Month:
+                <b>@($"{Model.PricePerMonth:f2}") BGN</b>
+            </h6>
+            <h6>(@(Model.IsRented ? "Rented" : "Not Rented"))</h6>
+            <br />
+            <a asp-controller="House" asp-action="Details" asp-route-id="@Model.Id"
+               class="btn btn-success">Details</a>
 
-    @if (this.User.Identity?.IsAuthenticated ?? false)
-    {
-        <a asp-controller="House" asp-action="Edit" asp-route-id="@Model.Id"
-           class="btn btn-warning">Edit</a>
-        <a asp-controller="House" asp-action="Delete" asp-routeid="@Model.Id"
-           class="btn btn-danger">Delete</a>
-        <p></p>
-        @if (!Model.IsRented)
-        {
-            <form class="input-group-sm" asp-controller="House"
-                  asp-action="Rent" asp-route-id="@Model.Id" method="post">
-                <input class="btn btn-primary" type="submit" value="Rent" />
-            </form>
-        }
-        else
-        {
-            <form asp-controller="House" asp-action="Leave"
-                  asp-route-id="@Model.Id" method="post">
-                <input class="btn btn-primary" type="submit" value="Leave"
-                />
-            </form>
-        }
-    }
-</div>
-</div>
+            @if (this.User.Identity?.IsAuthenticated ?? false)
+            {
+                @if (isUserAgent && isAgentOwnerOfTheHouse)
+                {
+                    <a asp-controller="House" asp-action="Edit" asp-route-id="@Model.Id"
+                       class="btn btn-warning">Edit</a>
+                    <a asp-controller="House" asp-action="Delete" asp-routeid="@Model.Id"
+                       class="btn btn-danger">Delete</a>
+                }
+                <p></p>
+                @if (!Model.IsRented)
+                {
+                    <form class="input-group-sm" asp-controller="House"
+                          asp-action="Rent" asp-route-id="@Model.Id" method="post">
+                        <input class="btn btn-primary" type="submit" value="Rent" />
+                    </form>
+                }
+                else
+                {
+                    <form asp-controller="House" asp-action="Leave"
+                          asp-route-id="@Model.Id" method="post">
+                        <input class="btn btn-primary" type="submit" value="Leave" />
+                    </form>
+                }
+            }
+        </div>
+    </div>
 </div>
 
