--- a/HouseRenting/HouseRenting.Web/Views/Shared/_Layout.cshtml
+++ b/HouseRenting/HouseRenting.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,12 @@
 ﻿@using static HouseRentingSystem.Common.GeneralApplicationConstants;
+@using HouseRentingSystem.Services.Interfaces
+@using HouseRentingSystem.Web.Infrastructure.Extensions
+
+@inject IAgentService AgentService
+@{
+    bool isUserAgent = await AgentService.AgentExistsByUserIdAsync(this.User.GetId());
+}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -35,9 +43,12 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="Mine">My Houses</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="Add">Add House</a>
-                            </li>
+                            @if (isUserAgent)
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="House" asp-action="Add">Add House</a>
+                                </li>
+                            }
                         }
                     </ul>
                     <partial name="_LoginPartial" />
